Fixed breadcrumb colors and spacing

--- a/CSS/Realms.css
+++ b/CSS/Realms.css
@@ -204,14 +204,22 @@
   --ipaShadow: none;
 
   /* breadcrumbs */
+  --breadcrumbLinkColor: var(--Malibu);
+  --breadcrumbBorder: var(--GullGrey);
+  --breadcardBgColor: var(--Mirage);
+  --breadcardBorder: 2px solid var(--GullGrey);
+  --breadcardBorderRadius: 15px;
+  --breadcardBorderInset: var(--Mirage10D);
+  --breadcardBorderOutset: var(--Black60);
+  --breadcardShadow: 0px 1px 10px 2px var(--breadcrumbBorderOutset), inset 0px 0px 10px 0px var(--breadcrumbBorderInset);
 
   /* search */
-    --searchBgColor: var(--PaleIce);
-    --searchColor: var(--BlueWhale);
-    --searchColorMuted: var(--BlueWhale20L);
-    --searchActiveBgColor; var(--PaleIce10D);
-    --searchActiveColor: var(--BlueWhale10D);
-    --searchShadow: 3px 3px 5px var(--Black40);
+  --searchBgColor: var(--PaleIce);
+  --searchColor: var(--BlueWhale);
+  --searchColorMuted: var(--BlueWhale20L);
+  --searchActiveBgColor; var(--PaleIce10D);
+  --searchActiveColor: var(--BlueWhale10D);
+  --searchShadow: 3px 3px 5px var(--Black40);
 
   /* spacing */
 
@@ -636,20 +644,9 @@
   }
 }
 
-/* STORYTELLER SEED */
-
-/* TOHERE */
-
-/* ARTICLE BLOCKS */
-
-.user-css .article-panel .details .heading {
-  font-weight: var(--nearly-bold);
-  text-shadow: none;
-}
-
 /* BREADCRUMBS */
 
-/* breadcrumbs contain the world link so back to world is redundant */
+/* breadcrumbs contain the world link so backtoworld is redundant */
 .user-css .backtoworld {
   display: none;
 }
@@ -662,20 +659,30 @@
     position: relative;
     left: 1rem;
   }
+  a {
+    color: var(--breadcrumbLinkColor);
+  }
+  a:hover {
+    color: var(--hoverColor);
+  }
   hr {
-    margin-top: 1em;
+    margin-top: .5em;
     margin-bottom: 0;
-    border-bottom: 1px solid var(--LightBlueGrey);
+    border-bottom: var(--breadcrumbBorder);
     border-top: unset;
+    opacity: .5;
   }
   .breadcrumb {
     margin: 0;
   }
   .breadcrumb-card {
-    background-color: var(--breadcrumb-bgcolor);
-    border-radius: 15px;
-    border: 2px solid var(--main-h2-line-color);
-    box-shadow: 0px 1px 10px 2px var(--breadcrumb-outset-shadow-color), inset 0px 0px 10px 0px var(--breadcrumb-inset-shadow-color);
+    /* use important to override bootstrap setting */
+    margin-top: .5em;
+    margin-bottom: .5em !important;
+    background-color: var(--breadcardBgColor);
+    border-radius: var(--breadcardBorderRadius);
+    border: var(--breadcardBorder);
+    box-shadow: var(--breadcardShadow);
     div[class|=card] {
       padding: .75rem;
     }
@@ -720,4 +727,15 @@
 }
 .user-css .article-title-author {
   order: 3;
+}
+
+/* STORYTELLER SEED */
+
+/* TOHERE */
+
+/* ARTICLE BLOCKS */
+
+.user-css .article-panel .details .heading {
+  font-weight: var(--nearly-bold);
+  text-shadow: none;
 }
